--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -15,4 +15,4 @@ filters.cors.enabled=true
 
 ## Logging configuration ##
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
