--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto= update
 springdoc.swagger-ui.path=/swagger-ui.html
 
 filters.cors.enabled=false
+
+spring.jackson.serialization.fail-on-empty-beans=false
