Global logging added using spring aspect

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 filters.cors.enabled=false
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+
+### Logging configuration ###
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.com.nura=DEBUG
