--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jackson.serialization.fail-on-empty-beans=false
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.nura=DEBUG
+
+
+jwt.secret=jeweljwtsecret8892
